--- a/app/views/locations/search.html.erb
+++ b/app/views/locations/search.html.erb
@@ -8,10 +8,20 @@
 
 <body>
 
-<p>yay</p>
+<%= form_tag({action: :search}, {method: :get}) do %>
+    <p>
+      <%= label_tag :address, '住所:' %>
+      <%= text_field_tag :address, @address %>
+      <%= submit_tag "検索" %>
+    </p>
+<% end %>
+
+<%= @latitude %>
+
+<%= @longitude %>
+
 
 </body>
-
 
 
 </html>
