--- a/app/views/locations/search.html.erb
+++ b/app/views/locations/search.html.erb
@@ -8,13 +8,7 @@
 
 <body>
 
-<%= form_tag({action: :search}, {method: :get}) do %>
-    <p>
-      <%= label_tag :address, '住所:' %>
-      <%= text_field_tag :address, @address %>
-      <%= submit_tag "検索" %>
-    </p>
-<% end %>
+<%= render 'form' %>
 
 <%= @latitude %>
 
