[update] search.htmlに学生と家族の住所情報を出力

--- a/app/views/locations/search.html.erb
+++ b/app/views/locations/search.html.erb
@@ -10,10 +10,18 @@
 
 <%= render 'form' %>
 
-<%= @latitude %>
+<p>
+  <%= "学生の住所：#{@inputaddress}" %>
+</p>
 
-<%= @longitude %>
+<p>
+  <%= "家族の住所：#{@familyaddress}" %>
+</p>
 
+<p>
+  <%= "所要時間：#{@response["routes"][0]["duration"]}秒" %>
+  <%= "距離：#{@response["routes"][0]["distance"]}m" %>
+</p>
 
 </body>
 
