[fix] @locationsがnillのときにも、ビューが表示できるように修正

--- a/app/views/locations/search.html.erb
+++ b/app/views/locations/search.html.erb
@@ -14,6 +14,7 @@
   <%= "学生の住所：#{@inputaddress}" %>
 </p>
 
+<% if @locations.present? %>
   <% @locations.each do |n| %>
       <% @familyaddress = n.address %>
       <% destinationLat = n.latitude %>
@@ -25,11 +26,10 @@
       <%= "家族の住所：#{@familyaddress}" %>
 
       <p>
-        <%= "所要時間：#{@response["routes"][0]["duration"]}秒" %>
         <%= "距離：#{@response["routes"][0]["distance"]}m" %>
       </p>
   <% end %>
-
+<% end %>
 
 </body>
 
