[update] APIを使わずに、二点間の距離計算とソート表示を実装

--- a/app/views/locations/search.html.erb
+++ b/app/views/locations/search.html.erb
@@ -10,25 +10,18 @@
 
 <%= render 'form' %>
 
-<p>
-  <%= "学生の住所：#{@inputaddress}" %>
-</p>
 
-  <% @locations.each do |n| %>
-      <% @familyaddress = n.address %>
-      <% destinationLat = n.latitude %>
-      <% destinationLon = n.longitude %>
 
-      <% endpointUrl = "http://router.project-osrm.org/route/v1/driving/#{@currentPlaceLon},#{@currentPlaceLat};#{destinationLon},#{destinationLat}" %>
-      <% @response =  HTTParty.get(URI.encode(endpointUrl)) %>
 
-      <%= "家族の住所：#{@familyaddress}" %>
+<% @candidateList.each do |c| %>
+    <p>
+      <%= "家族の住所: #{c[0]}" %>
+    </p>
 
-      <p>
-        <%= "所要時間：#{@response["routes"][0]["duration"]}秒" %>
-        <%= "距離：#{@response["routes"][0]["distance"]}m" %>
-      </p>
-  <% end %>
+    <p>
+      <%= "距離: #{c[1]} km" %>
+    </p>
+<% end %>
 
 
 </body>
