[fix] locations/search時のエラーを解決
locations/searchにアクセスしたとき、nillの@candidateListに対して処理を行おうとして怒られるため、if文で条件分岐した。

--- a/app/views/locations/search.html.erb
+++ b/app/views/locations/search.html.erb
@@ -12,17 +12,17 @@
 
 
 
+<% if @candidateList.present?%>
+    <% @candidateList.each do |c| %>
+        <p>
+          <%= "家族の住所: #{c[0]}" %>
+        </p>
 
-<% @candidateList.each do |c| %>
-    <p>
-      <%= "家族の住所: #{c[0]}" %>
-    </p>
-
-    <p>
-      <%= "距離: #{c[1]} km" %>
-    </p>
+        <p>
+          <%= "距離: #{c[1]} km" %>
+        </p>
+    <% end %>
 <% end %>
-
 
 </body>
 
