[Modify] Viewの表示整理

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,7 +1,6 @@
+<ul>
 <% @locations.each do |f| %>
-    <p>
-      <%= f.address %>
-      <%= f.latitude %>
-      <%= f.longitude %>
-    </p>
+      <li><%= f.address %>, <%= f.latitude %>, <%= f.longitude %></li>
 <% end %>
+</ul>
+
