--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -1,7 +1,5 @@
 <%= form_tag({action: :search}, {method: :get}) do %>
-    <p>
-      <%= label_tag :address, '住所:' %>
-      <%= text_field_tag :address, @address %>
-      <%= submit_tag "検索" %>
-    </p>
+    <%= label_tag :address, '住所:' %>
+    <%= text_field_tag :address %>
+    <%= submit_tag '検索' %>
 <% end %>
